--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">fix</string>
-    <string name="action_settings">Settings</string>
+    <string name="contact_msg">You are hired</string>
+    <string name="connection_error">connection error</string>
+    <string name="retry">RETRY</string>
 </resources>
